refactor: Align Blueprint Manifest and update data product features with new specification
- Updated the Blueprint Manifest structure to use `repositories` and `root.targets` instead of the previous `instantiation.strategy`.
- Enhanced the `update-data-product` API to utilize `targetId` for repository identification, ensuring compatibility with the new manifest format.
- Refactored related services and use cases to support the updated instantiation scenarios based on repository cardinality and composition presence.
- Improved documentation and analysis files to reflect the changes in the manifest specification and API behavior.